# TP_GPU

tp_reduce/: CMakeLists.txt  README.md
tp_reduce/bench/: benchmark_registerer.hh  fixture.hh  main.cc  main_helper.hh  test_helpers.cu  test_helpers.cuh
tp_reduce/src/: to_bench.cu  to_bench.cuh
